# python-categories

./: .gitignore  LICENSE  README.md  main_endofunctor.py  main_functor.py  main_group.py  main_monad.py  main_monoid.py  main_monoid_.py  main_semigroup.py  pyproject.toml
notebooks/: endofunctors.ipynb  monads.ipynb  monoid.ipynb  monoids.ipynb
src/categories/: compose.py  endofunctor.py  functions.py  functor.py  group.py  maybe.py  monad.py  monoid.py  monoid_.py  ring.py  scripts.py  semigroup.py
src/categories/categories/: __init__.py  functor.py  monad.py  scripts.py
src/categories/functors/: forgetful.py
src/categories/monoids/: set_monoid.py  type_monoid.py
src/python_categories/: functions.py  monad.py
src/python_categories/functors/: endofunctor.py
tests/: test_monoid.py
