# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "categories"
requires-python = ">=3.12"
dependencies = []
version = "0.1.0"
authors = [
    {name = "Robert Crellin"}
]
keywords = ["categories", "monoids"]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest"
]

ju = [
    "mypy",
    "jupyter",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
enable_incomplete_feature="NewGenericSyntax"
exclude = ['out', 'build', 'dev']

[tool.setuptools]
include-package-data = false